@@ -2,7 +2,7 @@ NAME
     Encode::Arabic - Encodings of Arabic
 
 REVISION
-        $Revision: 338 $        $Date: 2007-06-07 03:30:40 +0200 (Thu, 07 Jun 2007) $
+        $Revision: 417 $        $Date: 2007-09-24 15:03:33 +0200 (Mon, 24 Sep 2007) $
 
 SYNOPSIS
         use Encode::Arabic;                 # imports just like 'use Encode' even with options would
